Use SequencedCollection methods